Begin writing Started drafting the introduction/background section

--- a/references.bib
+++ b/references.bib
@@ -92,3 +92,66 @@
 	urldate = {2025-04-14},
 	file = {Pitch clock - BR Bullpen:C\:\\Users\\Christian\\Zotero\\storage\\4QI7WLZH\\Pitch_clock.html:text/html},
 }
+
+@misc{noauthor_new_nodate,
+	title = {New rules, features, protocols for 2020 {MLB} season},
+	url = {https://www.mlb.com/news/mlb-announces-new-features-for-2020-season},
+	abstract = {Major League Baseball on Monday announced some of the unique features that will be a part of the 2020 regular season, including health and safety protocols that will impact play on the field as well as revised operating procedures away from it. Summer Camp presented by Camping World begins on},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\765A2BZY\\mlb-announces-new-features-for-2020-season.html:text/html},
+}
+
+@misc{noauthor_ghost_2023,
+	title = {'{Ghost} runner' in extra innings made permanent by {MLB}},
+	url = {https://apnews.com/article/mlb-sports-baseball-los-angeles-dodgers-rob-manfred-fcbe340bfcc21dffe7f6af314c06063e},
+	abstract = {Starting extra innings with a runner on second base during the regular season was made a permanent rules change by Major League Baseball after three seasons of use during the coronavirus pandemic.},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {AP News},
+	month = feb,
+	year = {2023},
+}
+
+@misc{noauthor_these_nodate,
+	title = {These are the rule changes for 2020 season},
+	url = {https://www.mlb.com/news/mlb-rule-changes-for-2020-season},
+	abstract = {Major League Baseball made its rule changes for the 2020 season official on Wednesday.
+There are four categories of rules going into effect: the three-batter minimum for pitchers, roster limits, adjustments to the injured list and option periods for pitchers and two-way players, and a reduction in the time managers},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\H4F5G28E\\mlb-rule-changes-for-2020-season.html:text/html},
+}
+
+@misc{noauthor_designated_nodate-2,
+	title = {Designated {Hitter} {Rule} {\textbar} {Glossary}},
+	url = {https://www.mlb.com/glossary/rules/designated-hitter-rule},
+	abstract = {The Official Site of Major League Baseball},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\V7WE2NLH\\designated-hitter-rule.html:text/html},
+}
+
+@misc{noauthor_designated_nodate-3,
+	title = {Designated {Runner} {\textbar} {Glossary}},
+	url = {https://www.mlb.com/glossary/rules/designated-runner},
+	abstract = {The Official Site of Major League Baseball},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\VLBTFWY6\\designated-runner.html:text/html},
+}
+
+@misc{noauthor_pitch_nodate-2,
+	title = {Pitch timer, shift restrictions among announced rule changes for '23},
+	url = {https://www.mlb.com/news/mlb-2023-rule-changes-pitch-timer-larger-bases-shifts},
+	abstract = {A pitch timer, limits on defensive shifts and bigger bases are coming to Major League Baseball in 2023.
+Following recent experiments in the Minor Leagues, the recently formed Joint Competition Committee voted Friday in favor of three rule changes aimed at improving pace of play, action and safety at the},
+	language = {en},
+	urldate = {2025-04-14},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\EH763UUW\\mlb-2023-rule-changes-pitch-timer-larger-bases-shifts.html:text/html},
+}
