Update background text Reorganize and add new citations.

--- a/resources/references.bib
+++ b/resources/references.bib
@@ -155,3 +155,26 @@ Following recent experiments in the Minor Leagues, the recently formed Joint Com
 	journal = {MLB.com},
 	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\EH763UUW\\mlb-2023-rule-changes-pitch-timer-larger-bases-shifts.html:text/html},
 }
+
+@misc{schofield_pitch_2023,
+	title = {Pitch timers, disengagements, and the other new {MLB} rules, explained},
+	url = {https://www.sbnation.com/23601664/mlb-rule-changes-2023-explained},
+	abstract = {Restrictions on the shift and other tweaks coming to MLB this season},
+	language = {en},
+	urldate = {2025-04-28},
+	journal = {SBNation.com},
+	author = {Schofield, Mark},
+	month = feb,
+	year = {2023},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\A6N5SGC5\\mlb-rule-changes-2023-explained.html:text/html},
+}
+
+@misc{noauthor_balk_nodate,
+	title = {Balk \& {Disengagement} {Violation} (2023 rule change) {\textbar} {Glossary}},
+	url = {https://www.mlb.com/glossary/rules/balk},
+	abstract = {The Official Site of Major League Baseball},
+	language = {en},
+	urldate = {2025-04-28},
+	journal = {MLB.com},
+	file = {Snapshot:C\:\\Users\\Christian\\Zotero\\storage\\66WESZZA\\balk.html:text/html},
+}
