--- a/explore data/three_batter_minimum.qmd
+++ b/explore data/three_batter_minimum.qmd
@@ -28,6 +28,7 @@ library(dplyr)
 library(ggplot2)
 library(broom)
 library(skimr)
+library(gtsummary)
 ```
 
 ```{r}
@@ -36,9 +37,9 @@ library(skimr)
 
 # Use a flexible route to the file path
 if (basename(getwd()) == "explore data") {
-  path <- "../resources/data/"
+  path <- "../resources/data"
 } else if (basename(getwd()) == "MLB-rule-changes") {
-  path <- "resources/data/"
+  path <- "resources/data"
 } else {print("Failed to set path")}
 
 df_appearances <- read_csv(file.path(path, "pitcher_appearances.csv"))
@@ -70,7 +71,7 @@ tbl_n_per_game_yearly <-
 
 How many pitchers are teams using in a game over the years?
 
-With a three-batter minimum, the LOOGY specialty role should mostly be eliminated and fewer pitchers might be used in a game.
+With a three-batter minimum, the LOOGY and similar specialty roles should mostly be eliminated leading to fewer pitchers used in a game.
 
 ```{r}
 # Plot pitchers per game per year
@@ -111,6 +112,15 @@ tbl_changes_per_game_yearly <-
   group_by(game_id, year) |>
   summarise(n = n(), .groups = "drop") |>
   
+  # Input games without a mid-inning pitching change
+  mutate(event = TRUE) |>
+  right_join(
+    df_appearances |> select(game_id, year) |> distinct(),
+    by = c("game_id", "year")
+  ) |>
+  mutate(n = ifelse(is.na(event), 0, n)) |>
+  select(-event) |>
+  
   # Add indication of rule change and change year to a factor
   mutate(rule_change = ifelse(year < 2020, FALSE, TRUE)) |>
   mutate(year = factor(year))
@@ -136,3 +146,80 @@ t.test(n ~ rule_change, data = tbl_changes_per_game_yearly) |>
 ```
 
 The number of mid-inning pitching changes decreased since 2020, but the magnitude was small.
+
+## Games with unscheduled pauses
+
+A mid-inning pitching change would add a pause in play that was not already scheduled, such as pauses in between innings.
+
+What proportion of games had these added pauses?
+
+### 1 or more pauses
+
+```{r}
+#| code-summary: Prepare data
+
+# Indicate games with n pauses
+tbl_changes_per_game_yearly <- mutate(
+  tbl_changes_per_game_yearly,
+  pause_01 = ifelse(n > 0, TRUE, FALSE),
+  pause_02 = ifelse(n > 1, TRUE, FALSE),
+  pause_03 = ifelse(n > 2, TRUE, FALSE)
+)
+
+# Summarize by year
+skimr::skim(select(group_by(tbl_changes_per_game_yearly, year), pause_01, year)) |>
+  skimr::yank("logical")
+
+# Test result by rule change
+gtsummary::tbl_summary(
+  data = tbl_changes_per_game_yearly,
+  include = pause_01,
+  by = rule_change
+) |>
+  gtsummary::  modify_spanning_header(all_stat_cols() ~ "**Rule change**") |>
+  gtsummary::add_p()
+```
+
+There was a -1% change in games with any added pauses in play due to mid-inning pitching changes.
+
+### 2 or more pauses
+
+```{r}
+# Summarize by year
+skimr::skim(select(group_by(tbl_changes_per_game_yearly, year), pause_02, year)) |>
+  skimr::yank("logical")
+
+# Test result by rule change
+gtsummary::tbl_summary(
+  data = tbl_changes_per_game_yearly,
+  include = pause_02,
+  by = rule_change
+) |>
+  gtsummary::  modify_spanning_header(all_stat_cols() ~ "**Rule change**") |>
+  gtsummary::add_p()
+```
+
+There was a -3% change in games with more than 2 added pauses in play due to mid-inning pitching changes.
+
+### 3 or more pauses
+
+```{r}
+# Summarize by year
+skimr::skim(select(group_by(tbl_changes_per_game_yearly, year), pause_03, year)) |>
+  skimr::yank("logical")
+
+# Test result by rule change
+gtsummary::tbl_summary(
+  data = tbl_changes_per_game_yearly,
+  include = pause_03,
+  by = rule_change
+) |>
+  gtsummary::  modify_spanning_header(all_stat_cols() ~ "**Rule change**") |>
+  gtsummary::add_p()
+```
+
+There was a -4% change in games with more than 3 added pauses in play due to mid-inning pitching changes.
+
+**Overall conclusion:** Although reductions of games with added pauses are statistically significant and of greater magnitude as the minimum threshold increases, the real-world impact is likely small.
+
+Note: Could just show `pause_01` through `pause_03` on same table.
