--- a/report.qmd
+++ b/report.qmd
@@ -28,4 +28,62 @@ While each of these rule changes intends to improve the MLB viewing experiences,
 
 ## Methods
 
+**Notes**
+
+Observation window
+
+-   2014-2024
+
+-   Used year of implementation for each rule to determine pre-rule and post-rule windows
+
+-   Regular season games only
+
+-   MLB teams only; No minor leagues
+
+-   2020 including when using within-game metrics, excluded when using season-long metrics
+
+Granularity of data
+
+-   Game-level, inning-level, individual plays, and season-long as needed per metric.
+
+Sources
+
+-   MLB Stats API for all data
+
+Outcomes
+
+-   3-batter minimum: Number of pitchers used per game, number of pitching changes in the middle of an inning per game, proportion of games with at least one/two/three mid-inning pitching changes
+
+-   Extra-innings baserunner: Number of extra innings required to complete a tied game at the 9th inning, number of runs scored during extra innings, number of batters needed before first run in extra innings, final inning in marathon games, total runs in marathon games, batters until first score in marathon games (marathons being those in the 95th percentile of game length by innings per season)
+
+-   Universal designated hitter: Number of at-bats by pitcher position during pre-rule window versus number by DH position during post-rule window, on base percentage of pitcher position during pre-rule window versus percentage of DH position during post-rule window, and on-base-plus-slugging with same comparison
+
+-   Base stealing / bigger bases / pitcher disengagement policy: Number of attempted steals by teams per season, success rate of steals by teams per season
+
+-   Pitch clock and play duration: Length of individual plays, combined game duration (action time, excluding non-play time)
+
+-   Defensive shift ban: Team BABIP stat across seasons, outcome of plays (hit, out, etc) when batter makes pull-side contact
+
+Statistical analysis
+
+-   Summarize each metric with mean (SD), median (IQR), and range.
+
+-   Pre/post comparisons with two-sample t-tests (not paired because too many variables change such as players, coaches, schedules, weather). 95% confidence intervals for differences in means or proportions.
+
+-   Exclusion of 2020 year when shortened season would affect team statistics.
+
+Software and reproducibility
+
+-   Python version 3.11.6
+
+-   R version 4.4.3
+
+-   Version control stored on GitHub repository containing all scripts and Docker files
+
+Data licensing
+
+-   All data are publicacly available via the free MLB Stats API
+
+-   No personal player data or personally identifiable information were used
+
 ## References
