--- a/report.qmd
+++ b/report.qmd
@@ -72,18 +72,10 @@ Statistical analysis
 
 -   Exclusion of 2020 year when shortened season would affect team statistics.
 
-Software and reproducibility
+**Software, reproducibility, and data licensing**
 
--   Python version 3.11.6
+All data-retrieval and preprocessing was executed using Python 3.11.6. The exploration and final analysis were written with R 4.4.3 within a lightweight Docker container. Versioned scripts and written reports were saved on a public GitHub repository to ensure transparency.
 
--   R version 4.4.3
-
--   Version control stored on GitHub repository containing all scripts and Docker files
-
-Data licensing
-
--   All data are publicacly available via the free MLB Stats API
-
--   No personal player data or personally identifiable information were used
+Raw data originated from the free, official MLB Stats API. No personal player data or personally identifiable information were used.
 
 ## References
