--- a/report.qmd
+++ b/report.qmd
@@ -28,29 +28,19 @@ While each of these rule changes intends to improve the MLB viewing experiences,
 
 ## Methods
 
-**Notes**
+**Study Period**
 
-Observation window
+This was a retrospective, observational study of MLB rule changes that were implemented during the 2020-2023 seasons. Only MLB regular-season games were included. Minor league games and postseason matchups were excluded.
 
--   2014-2024
+For each studied rule, the year of implementation defined the boundary between pre-rule and post-rule windows. All seasons prior to implementation, through the start of the 2014 regular season, comprised of the pre-rule window. All seasons from implementation and onward, through the end of the 2024 regular season, comprised of the post-rule period.
 
--   Used year of implementation for each rule to determine pre-rule and post-rule windows
+The 2020 season was a short season due to the COVID-19 pandemic. Therefore this season was included when analyzing within-game metrics and excluded from season-aggregated metrics.
 
--   Regular season games only
+**Outcomes**
 
--   MLB teams only; No minor leagues
+Various metrics tailored to each rule change were investigated to perform a robust analysis. These metrics are described alongside the respective rule change in TABLE X.
 
--   2020 including when using within-game metrics, excluded when using season-long metrics
-
-Granularity of data
-
--   Game-level, inning-level, individual plays, and season-long as needed per metric.
-
-Sources
-
--   MLB Stats API for all data
-
-Outcomes
+TABLE X
 
 -   3-batter minimum: Number of pitchers used per game, number of pitching changes in the middle of an inning per game, proportion of games with at least one/two/three mid-inning pitching changes
 
